# bayes-market

./: .gitignore  README.md  ftlhpeeq8k8sm8eqradthmegu2fptngg  manifest  package-lock.json
.beads/: metadata.json
.fleet/: BACKLOG.md  LEARNINGS.md
backend/: __init__.py  formula_schema.py  lmsr.py  seed_calibration.json  seeds_external.json  seeds_takeoff.json  server.py  test_alpha.py  test_beta.py  test_delta.py
deploy/: futarchy-arb.service  futarchy-calibrator.env.example  futarchy-calibrator.service
docs/: market-contracts-and-settlement.md  openapi.yaml  t1737-probability-edit-endpoint-ownership.md  t1737-probability-edit-http-contract-freeze.md  t537-epic-execution-baseline.md  t538-scope-matrix.md  t539-mvp-launch-gate.md  t544-event-sourcing-contract.md  t547-shared-event-formula-contract-freeze.md  t549-unconditional-soft-evidence-boundary-freeze.md  t551-structure-preserving-validator-boundary-freeze.md  t553-current-architecture-cache-boundary-freeze.md  t556-scope-and-compatibility-boundary-freeze.md  t557-unconditional-solvency-contract-freeze.md  t560-dac-feasibility-memo.md  t563-journal-read-surface-freeze.md  t571-per-market-engine-stats-contract-freeze.md  t581-dns-cloudflare-tunnel-public-runbook.md  t586-full-chain-http-contract-freeze.md  t587-load-simulation-launch-checklist.md
exchange/: README.md  requirements.txt
exchange/cli/: pyproject.toml
exchange/cli/futarchy_cli/: __init__.py  api.py  auth.py  fmt.py  main.py  test_cli_units.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  (+2 more)
(+1413 files in other folders)
