[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "futarchy"
dynamic = ["version"]
description = "CLI for Futarchy prediction markets"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[tool.hatch.version]
path = "futarchy_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["futarchy_cli"]

[project.scripts]
futarchy = "futarchy_cli.main:main"
